# RAG

./: .gitignore  README.md  chat.py  pyproject.toml  requirements.txt
src/DATA/: data_text.py
src/EMBEDDING/: embedding_pipeline.py
src/LLMCLIENT/: llm_client.py
src/RAGAS/: ragas_evaluator.py  test_questions.json
src/RAGCLIENT/: rag_client.py
tests/: test_DATA.py  test_LLMCLIENT.py  test_RAGCLIENT.py
