[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_rag_pipeline"
version = "0.0.0"
description = "RAG pipeline project"
requires-python = ">=3.13"
authors = [
    { name = "Mah Rts" }
]

dependencies = [
    "openai==2.34.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
